package lan

import (
	"bytes"
	"encoding/binary"
	"encoding/json"
	"fmt"
	"hash/crc32"
	"log"
	"time"

	"google.golang.org/protobuf/proto"

	pb "github.com/aether/sync/api/proto"
	"github.com/aether/sync/internal/domain/transport"
)

const (
	// Magic bytes: "AETH" in hex
	MagicByte1 = 0xAE
	MagicByte2 = 0x54
	MagicByte3 = 0x48
	MagicByte4 = 0x52
	
	// Protocol version
	ProtocolVersion = 0x0100 // 1.0
	
	// Message types
	MessageTypeHandshake      = 0x0001
	MessageTypeChunkRequest   = 0x0002
	MessageTypeChunkResponse  = 0x0003
	MessageTypeMetadata       = 0x0004
	MessageTypePing           = 0x0005
	MessageTypePong           = 0x0006
	MessageTypeConnectionRequest = 0x0007
	MessageTypeConnectionAccept = 0x0008
	MessageTypeConnectionReject = 0x0009
	
	// Frame sizes
	HeaderSize = 16 // Magic(4) + Version(2) + Type(2) + Length(4) + CRC(4)
	MaxPayloadSize = 10 * 1024 * 1024 // 10 MB
)

// Protocol Aether P2P binary protocol
// Frame format:
// +------+------+------+------+----------+
// | Magic| Ver  | Type | Len  | Payload  |
// | (4B) | (2B) | (2B) | (4B) | (var)    |
// +------+------+------+------+----------+
// | CRC32 (4B) - checksumof entire frame|
// +--------------------------------------+
type Protocol struct{}

// NewProtocol yeni protocol instance oluÅŸturur
func NewProtocol() *Protocol {
	return &Protocol{}
}

// EncodeFrame mesajÄ± binary frame'e encode eder
func (p *Protocol) EncodeFrame(messageType uint16, payload []byte) ([]byte, error) {
	if len(payload) > MaxPayloadSize {
		return nil, fmt.Errorf("payload Ã§ok bÃ¼yÃ¼k: %d > %d", len(payload), MaxPayloadSize)
	}
	
	buf := new(bytes.Buffer)
	
	// Magic bytes
	buf.WriteByte(MagicByte1)
	buf.WriteByte(MagicByte2)
	buf.WriteByte(MagicByte3)
	buf.WriteByte(MagicByte4)
	
	// Version
	if err := binary.Write(buf, binary.BigEndian, uint16(ProtocolVersion)); err != nil {
		return nil, fmt.Errorf("version yazÄ±lamadÄ±: %w", err)
	}
	
	// Message type
	if err := binary.Write(buf, binary.BigEndian, messageType); err != nil {
		return nil, fmt.Errorf("message type yazÄ±lamadÄ±: %w", err)
	}
	
	// Payload length
	if err := binary.Write(buf, binary.BigEndian, uint32(len(payload))); err != nil {
		return nil, fmt.Errorf("payload length yazÄ±lamadÄ±: %w", err)
	}
	
	// Payload
	if _, err := buf.Write(payload); err != nil {
		return nil, fmt.Errorf("payload yazÄ±lamadÄ±: %w", err)
	}
	
	// CRC32 checksum (tÃ¼m frame Ã¼zerinden)
	crc := crc32.ChecksumIEEE(buf.Bytes())
	if err := binary.Write(buf, binary.BigEndian, crc); err != nil {
		return nil, fmt.Errorf("CRC yazÄ±lamadÄ±: %w", err)
	}
	
	frame := buf.Bytes()
	
	// Debug: Encode edilen frame'in ilk byte'larÄ±nÄ± logla
	if messageType == MessageTypeConnectionRequest {
		debugLen := len(frame)
		if debugLen > 30 {
			debugLen = 30
		}
		log.Printf("ğŸ”§ Encode edilen frame (ilk %d byte): %x", debugLen, frame[:debugLen])
	}
	
	return frame, nil
}

// DecodeFrame binary frame'i decode eder
func (p *Protocol) DecodeFrame(frame []byte) (messageType uint16, payload []byte, err error) {
	if len(frame) < HeaderSize {
		return 0, nil, fmt.Errorf("frame Ã§ok kÄ±sa: %d < %d", len(frame), HeaderSize)
	}
	
	buf := bytes.NewReader(frame)
	
	// Magic bytes kontrol
	magic := make([]byte, 4)
	buf.Read(magic)
	if magic[0] != MagicByte1 || magic[1] != MagicByte2 || 
	   magic[2] != MagicByte3 || magic[3] != MagicByte4 {
		return 0, nil, fmt.Errorf("geÃ§ersiz magic bytes: %02x %02x %02x %02x", magic[0], magic[1], magic[2], magic[3])
	}
	
	// Version
	var version uint16
	binary.Read(buf, binary.BigEndian, &version)
	if version != uint16(ProtocolVersion) {
		// Debug: frame'in ilk birkaÃ§ byte'Ä±nÄ± logla
		debugLen := len(frame)
		if debugLen > 20 {
			debugLen = 20
		}
		debugBytes := make([]byte, debugLen)
		copy(debugBytes, frame)
		return 0, nil, fmt.Errorf("desteklenmeyen protocol version: 0x%04x (expected: 0x%04x), frame start: %x", version, ProtocolVersion, debugBytes)
	}
	
	// Message type
	binary.Read(buf, binary.BigEndian, &messageType)
	
	// Payload length
	var payloadLen uint32
	binary.Read(buf, binary.BigEndian, &payloadLen)
	
	if payloadLen > MaxPayloadSize {
		return 0, nil, fmt.Errorf("payload Ã§ok bÃ¼yÃ¼k: %d > %d", payloadLen, MaxPayloadSize)
	}
	
	// Payload
	payload = make([]byte, payloadLen)
	buf.Read(payload)
	
	// CRC32 checksum
	var receivedCRC uint32
	binary.Read(buf, binary.BigEndian, &receivedCRC)
	
	// CRC doÄŸrulama
	calculatedCRC := crc32.ChecksumIEEE(frame[:len(frame)-4])
	if receivedCRC != calculatedCRC {
		return 0, nil, fmt.Errorf("CRC mismatch: received=0x%08x, calculated=0x%08x", receivedCRC, calculatedCRC)
	}
	
	return messageType, payload, nil
}

// EncodeChunkRequest chunk request mesajÄ± oluÅŸturur
func (p *Protocol) EncodeChunkRequest(chunkHash string) ([]byte, error) {
	req := &pb.ChunkRequest{
		ChunkHash: chunkHash,
	}
	
	payload, err := proto.Marshal(req)
	if err != nil {
		return nil, fmt.Errorf("protobuf marshal hatasÄ±: %w", err)
	}
	
	return p.EncodeFrame(MessageTypeChunkRequest, payload)
}

// DecodeChunkRequest chunk request mesajÄ±nÄ± parse eder
func (p *Protocol) DecodeChunkRequest(data []byte) (string, error) {
	messageType, payload, err := p.DecodeFrame(data)
	if err != nil {
		return "", err
	}
	
	if messageType != MessageTypeChunkRequest {
		return "", fmt.Errorf("beklenmeyen message type: 0x%04x", messageType)
	}
	
	req := &pb.ChunkRequest{}
	if err := proto.Unmarshal(payload, req); err != nil {
		return "", fmt.Errorf("protobuf unmarshal hatasÄ±: %w", err)
	}
	
	return req.ChunkHash, nil
}

// EncodeChunkResponse chunk response mesajÄ± oluÅŸturur (pull-based iÃ§in)
func (p *Protocol) EncodeChunkResponse(chunkHash string, chunkData []byte) ([]byte, error) {
	return p.EncodeChunkResponseWithFileInfo(chunkHash, chunkData, "", 0, 0)
}

// EncodeChunkResponseWithFileInfo chunk response mesajÄ± oluÅŸturur (push-based sync iÃ§in)
func (p *Protocol) EncodeChunkResponseWithFileInfo(chunkHash string, chunkData []byte, fileID string, chunkIndex, totalChunks int) ([]byte, error) {
	resp := &pb.ChunkResponse{
		Status: &pb.Status{
			Success: true,
			Message: "OK",
			Code:    200,
		},
		ChunkHash:   chunkHash,
		ChunkData:   chunkData,
		ChunkSize:   int64(len(chunkData)),
		FileId:      fileID,
		ChunkIndex:  int32(chunkIndex),
		TotalChunks: int32(totalChunks),
	}
	
	payload, err := proto.Marshal(resp)
	if err != nil {
		return nil, fmt.Errorf("protobuf marshal hatasÄ±: %w", err)
	}
	
	return p.EncodeFrame(MessageTypeChunkResponse, payload)
}

// DecodeChunkResponse chunk response mesajÄ±nÄ± parse eder
func (p *Protocol) DecodeChunkResponse(data []byte) (string, []byte, error) {
	messageType, payload, err := p.DecodeFrame(data)
	if err != nil {
		return "", nil, err
	}
	
	if messageType != MessageTypeChunkResponse {
		return "", nil, fmt.Errorf("beklenmeyen message type: 0x%04x", messageType)
	}
	
	resp := &pb.ChunkResponse{}
	if err := proto.Unmarshal(payload, resp); err != nil {
		return "", nil, fmt.Errorf("protobuf unmarshal hatasÄ±: %w", err)
	}
	
	if !resp.Status.Success {
		return "", nil, fmt.Errorf("chunk response error: %s", resp.Status.Message)
	}
	
	return resp.ChunkHash, resp.ChunkData, nil
}

// EncodeMetadata metadata mesajÄ± oluÅŸturur
func (p *Protocol) EncodeMetadata(metadata *transport.FileMetadata) ([]byte, error) {
	req := &pb.FileMetadataRequest{
		FileId: metadata.FileID,
	}
	
	payload, err := proto.Marshal(req)
	if err != nil {
		return nil, fmt.Errorf("protobuf marshal hatasÄ±: %w", err)
	}
	
	return p.EncodeFrame(MessageTypeMetadata, payload)
}

// DecodeMetadata metadata mesajÄ±nÄ± parse eder
func (p *Protocol) DecodeMetadata(data []byte) (*transport.FileMetadata, error) {
	messageType, payload, err := p.DecodeFrame(data)
	if err != nil {
		return nil, err
	}
	
	if messageType != MessageTypeMetadata {
		return nil, fmt.Errorf("beklenmeyen message type: 0x%04x", messageType)
	}
	
	req := &pb.FileMetadataRequest{}
	if err := proto.Unmarshal(payload, req); err != nil {
		return nil, fmt.Errorf("protobuf unmarshal hatasÄ±: %w", err)
	}
	
	// FileMetadata'yÄ± oluÅŸtur (basitleÅŸtirilmiÅŸ)
	metadata := &transport.FileMetadata{
		FileID: req.FileId,
	}
	
	return metadata, nil
}

// EncodePing ping mesajÄ± oluÅŸturur
func (p *Protocol) EncodePing(deviceID string) ([]byte, error) {
	req := &pb.PingRequest{
		DeviceId:  deviceID,
		Timestamp: 0, // Client tarafÄ±nda set edilecek
	}
	
	payload, err := proto.Marshal(req)
	if err != nil {
		return nil, fmt.Errorf("protobuf marshal hatasÄ±: %w", err)
	}
	
	return p.EncodeFrame(MessageTypePing, payload)
}

// DecodePing ping mesajÄ±nÄ± parse eder
func (p *Protocol) DecodePing(data []byte) (string, error) {
	messageType, payload, err := p.DecodeFrame(data)
	if err != nil {
		return "", err
	}
	
	if messageType != MessageTypePing {
		return "", fmt.Errorf("beklenmeyen message type: 0x%04x", messageType)
	}
	
	req := &pb.PingRequest{}
	if err := proto.Unmarshal(payload, req); err != nil {
		return "", fmt.Errorf("protobuf unmarshal hatasÄ±: %w", err)
	}
	
	return req.DeviceId, nil
}

// EncodePong pong mesajÄ± oluÅŸturur
func (p *Protocol) EncodePong(deviceID string, latencyMs int64) ([]byte, error) {
	resp := &pb.PingResponse{
		Status: &pb.Status{
			Success: true,
			Message: "Pong",
			Code:    200,
		},
		Timestamp: 0,
		LatencyMs: latencyMs,
	}
	
	payload, err := proto.Marshal(resp)
	if err != nil {
		return nil, fmt.Errorf("protobuf marshal hatasÄ±: %w", err)
	}
	
	return p.EncodeFrame(MessageTypePong, payload)
}

// DecodePong pong mesajÄ±nÄ± parse eder
func (p *Protocol) DecodePong(data []byte) (int64, error) {
	messageType, payload, err := p.DecodeFrame(data)
	if err != nil {
		return 0, err
	}
	
	if messageType != MessageTypePong {
		return 0, fmt.Errorf("beklenmeyen message type: 0x%04x", messageType)
	}
	
	resp := &pb.PingResponse{}
	if err := proto.Unmarshal(payload, resp); err != nil {
		return 0, fmt.Errorf("protobuf unmarshal hatasÄ±: %w", err)
	}
	
	return resp.LatencyMs, nil
}

// connectionRequest connection request iÃ§in basit struct
type connectionRequest struct {
	DeviceID   string `json:"device_id"`
	DeviceName string `json:"device_name"`
	Timestamp  int64  `json:"timestamp"`
}

// connectionResponse connection response iÃ§in basit struct
type connectionResponse struct {
	Accepted bool   `json:"accepted"`
	Message  string `json:"message"`
	DeviceID string `json:"device_id"`
}

// EncodeConnectionRequest connection request mesajÄ± oluÅŸturur
func (p *Protocol) EncodeConnectionRequest(deviceID, deviceName string) ([]byte, error) {
	req := &connectionRequest{
		DeviceID:   deviceID,
		DeviceName: deviceName,
		Timestamp:  time.Now().Unix(),
	}
	
	payload, err := json.Marshal(req)
	if err != nil {
		return nil, fmt.Errorf("JSON marshal hatasÄ±: %w", err)
	}
	
	return p.EncodeFrame(MessageTypeConnectionRequest, payload)
}

// DecodeConnectionRequest connection request mesajÄ±nÄ± parse eder
// payload zaten DecodeFrame'den gelmiÅŸ olmalÄ± (frame decode edilmiÅŸ deÄŸil)
func (p *Protocol) DecodeConnectionRequest(payload []byte) (string, string, error) {
	req := &connectionRequest{}
	if err := json.Unmarshal(payload, req); err != nil {
		return "", "", fmt.Errorf("JSON unmarshal hatasÄ±: %w", err)
	}
	
	return req.DeviceID, req.DeviceName, nil
}

// EncodeConnectionAccept connection accept mesajÄ± oluÅŸturur
func (p *Protocol) EncodeConnectionAccept(deviceID string) ([]byte, error) {
	resp := &connectionResponse{
		Accepted: true,
		Message:  "BaÄŸlantÄ± kabul edildi",
		DeviceID: deviceID,
	}
	
	payload, err := json.Marshal(resp)
	if err != nil {
		return nil, fmt.Errorf("JSON marshal hatasÄ±: %w", err)
	}
	
	return p.EncodeFrame(MessageTypeConnectionAccept, payload)
}

// DecodeConnectionAccept connection accept mesajÄ±nÄ± parse eder
func (p *Protocol) DecodeConnectionAccept(data []byte) (string, error) {
	messageType, payload, err := p.DecodeFrame(data)
	if err != nil {
		return "", err
	}
	
	if messageType != MessageTypeConnectionAccept {
		return "", fmt.Errorf("beklenmeyen message type: 0x%04x", messageType)
	}
	
	resp := &connectionResponse{}
	if err := json.Unmarshal(payload, resp); err != nil {
		return "", fmt.Errorf("JSON unmarshal hatasÄ±: %w", err)
	}
	
	if !resp.Accepted {
		return "", fmt.Errorf("baÄŸlantÄ± reddedildi: %s", resp.Message)
	}
	
	return resp.DeviceID, nil
}

// EncodeConnectionReject connection reject mesajÄ± oluÅŸturur
func (p *Protocol) EncodeConnectionReject(reason string) ([]byte, error) {
	resp := &connectionResponse{
		Accepted: false,
		Message:  reason,
	}
	
	payload, err := json.Marshal(resp)
	if err != nil {
		return nil, fmt.Errorf("JSON marshal hatasÄ±: %w", err)
	}
	
	return p.EncodeFrame(MessageTypeConnectionReject, payload)
}

// DecodeConnectionReject connection reject mesajÄ±nÄ± parse eder
func (p *Protocol) DecodeConnectionReject(data []byte) (string, error) {
	messageType, payload, err := p.DecodeFrame(data)
	if err != nil {
		return "", err
	}
	
	if messageType != MessageTypeConnectionReject {
		return "", fmt.Errorf("beklenmeyen message type: 0x%04x", messageType)
	}
	
	resp := &connectionResponse{}
	if err := json.Unmarshal(payload, resp); err != nil {
		return "", fmt.Errorf("JSON unmarshal hatasÄ±: %w", err)
	}
	
	return resp.Message, nil
}

